--- a/SOTPWatch Extension/ru.lproj/Localizable.strings
+++ b/SOTPWatch Extension/ru.lproj/Localizable.strings
@@ -1,9 +1,6 @@
 /* No comment provided by engineer. */
-"Refresh in " = "Обновится через";
+"Loading..." = "Загрузка";
 
 /* No comment provided by engineer. */
-"Refresh in s." = "Обновится через";
-
-/* No comment provided by engineer. */
-"s." = "сек.";
+"No accounts" = "Нет аккаунтов";
 
