--- a/Common/Authenticator/en.xcloc/Localized Contents/en.xliff
+++ b/Common/Authenticator/en.xcloc/Localized Contents/en.xliff
@@ -87,11 +87,6 @@
         <target>Create</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
-      <trans-unit id="Create backup" xml:space="preserve">
-        <source>Create backup</source>
-        <target>Create backup</target>
-        <note>No comment provided by engineer.</note>
-      </trans-unit>
       <trans-unit id="Data loaded" xml:space="preserve">
         <source>Data loaded</source>
         <target>Data loaded</target>
@@ -107,14 +102,9 @@
         <target>Error to upload file</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
-      <trans-unit id="Load from Backup" xml:space="preserve">
-        <source>Load from Backup</source>
-        <target>Load from Backup</target>
-        <note>No comment provided by engineer.</note>
-      </trans-unit>
-      <trans-unit id="Load from backup" xml:space="preserve">
-        <source>Load from backup</source>
-        <target>Load from backup</target>
+      <trans-unit id="Load from file" xml:space="preserve">
+        <source>Load from file</source>
+        <target>Load from file</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Ok" xml:space="preserve">
@@ -210,6 +200,11 @@
       <trans-unit id="Thank you for your support!" xml:space="preserve">
         <source>Thank you for your support!</source>
         <target>Thank you for your support!</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="Transfer data" xml:space="preserve">
+        <source>Transfer data</source>
+        <target>Transfer data</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="Welcome to" xml:space="preserve">
